implementation of CounterObject